# open-synth

./: .fvmrc  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  INSTRUMENT_REALISM_ROADMAP.md  LICENSE  PLAN.md  README.md  ROADMAP.md  THIRD_PARTY.md  TRANSFORMATION_PLAN.md  audit_report.json  audit_summary.txt  build.sh  classification_report.json  cull_list.txt  dart_test.yaml  dsp_compile_test.cpp  fix_list.txt  install.sh  pubspec.yaml
.github/workflows/: flutter_ci.yml  release.yml
.hermes/plans/: 2026-06-04_cc0-sample-integration.md  2026-06-04_performance-mode.md
.sandbox-tmp/: ccMU9dsH.s  ccqsRcDh.s  ccvTKOmL.s  ccxkHElh.s
android/app/: build.gradle.kts
docs/: MOBILE_BUILD.md  RELEASE.md  SAMPLE_LIBRARY_PLAN.md
dsp/: arpeggiator.cpp  audio_stream.cpp  audio_stream_ffi.cpp  audio_stream_test.cpp  audio_system.cpp  drum_ffi.cpp  drum_kit_mapping.cpp  drum_synth.cpp  envelope.cpp  filter.cpp  fx_amp_sim.cpp  fx_analog_delay.cpp  fx_auto_pan.cpp  fx_autowah.cpp  fx_bitcrusher.cpp  fx_cabinet_simulator.cpp  fx_chorus_ensemble.cpp  fx_comb_filter.cpp  fx_de_esser.cpp  fx_detune.cpp  fx_diffusion_delay.cpp  fx_dimension_d.cpp  fx_distortion.cpp  fx_engine.cpp  fx_eq.cpp  fx_exciter.cpp  fx_formant_filter.cpp  fx_fuzz.cpp  fx_gated_reverb.cpp  fx_grain_delay.cpp  fx_graphic_eq.cpp  fx_hall_reverb.cpp  fx_harmonizer.cpp  fx_limiter.cpp  fx_lo_fi.cpp  fx_maximizer.cpp  fx_multiband_compressor.cpp  fx_multitap_delay.cpp  fx_noise_gate.cpp  fx_non_linear_reverb.cpp  (+51 more)
include/: app_state_manager.h  arpeggiator.h  audio_buffer.h  audio_stream.h  audio_stream_ffi.h  audio_system.h  drum_kit_mapping.h  drum_synth.h  envelope.h  filter.h  fx_amp_sim.h  fx_analog_delay.h  fx_auto_pan.h  fx_autowah.h  fx_bitcrusher.h  fx_cabinet_simulator.h  fx_chorus_ensemble.h  fx_comb_filter.h  fx_de_esser.h  fx_detune.h  fx_diffusion_delay.h  fx_dimension_d.h  fx_distortion.h  fx_engine.h  fx_eq.h  fx_exciter.h  fx_formant_filter.h  fx_fuzz.h  fx_gated_reverb.h  fx_grain_delay.h  fx_graphic_eq.h  fx_hall_reverb.h  fx_harmonizer.h  fx_limiter.h  fx_lo_fi.h  fx_maximizer.h  fx_multiband_compressor.h  fx_multitap_delay.h  fx_noise_gate.h  fx_non_linear_reverb.h  (+59 more)
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  main_prod.dart
lib/data/: factory_presets.dart  sample_presets.dart
lib/exceptions/: app_exception.dart
lib/ffi/: audio_platform.dart  openamp_audio_stream.dart  openamp_synth.dart  sample_engine.dart
lib/models/: arpeggiator_config.dart  drum_kit_config.dart  envelope.dart  filter_config.dart  fx_config.dart  keyboard_split.dart  lfo_config.dart  macro_config.dart  midi_event.dart  mod_matrix.dart  mod_target.dart  morph_config.dart  oscillator.dart  preset_category.dart  recording_layer.dart  rhythm_pattern.dart  sample_preset.dart  sequencer_config.dart  synth_preset.dart  waveform.dart
lib/painters/: adsr_painter.dart  drive_wave_painter.dart  waveform_icon_painter.dart
lib/providers/: ab_comparison_provider.dart  arpeggiator_provider.dart  clock_provider.dart  drum_providers.dart  favorites_provider.dart  global_mix_provider.dart  keyboard_split_provider.dart  macro_provider.dart  midi_provider.dart  midi_recorder_provider.dart  mod_matrix_provider.dart  morph_provider.dart  navigation_provider.dart  randomize_lock_provider.dart  recent_presets_provider.dart  recording_layers_provider.dart  rhythm_provider.dart  sample_engine_provider.dart  sequencer_provider.dart  settings_provider.dart  synth_providers.dart  undo_redo_provider.dart
lib/screens/: home_screen.dart  main_shell.dart  midi_learn_screen.dart  mobile_shell.dart  mobile_synth_screen.dart  performance_screen.dart  preset_editor_screen.dart  recorder_screen.dart  retro_synth_screen.dart  settings_screen.dart  splash_screen.dart  split_screen.dart  synth_screen.dart
lib/services/: crashlytics_service.dart  preset_loader.dart
lib/theme/: retro_theme.dart  synth_theme.dart
lib/utils/: arp_sequence_builder.dart  audio_renderer.dart  error_handler.dart  logger.dart  midi_file_reader.dart  midi_file_writer.dart  wav_writer.dart  (+1 more)
linux/: CMakeLists.txt
native/: CMakeLists.txt
native/build_check/: CMakeCache.txt  Makefile  cmake_install.cmake
native/include/: arpeggiator.h  audio_stream.h  audio_stream_ffi.h  drum_kit_mapping.h  drum_synth.h  envelope.h  filter.h  fx_autowah.h  fx_bitcrusher.h  fx_engine.h  fx_gated_reverb.h  fx_pingpong_delay.h  fx_pitchshift.h  fx_ringmod.h  fx_rotary.h  fx_spring_reverb.h  legacy_fx.h  lfo.h  midi_file.h  oboe_audio_ffi.h  oscillator.h  param_queue.h  physical_model.h  rhythm_pattern_player.h  sample_engine.h  synth_engine.h  synth_ffi.h  synth_mixer.h  synth_part.h  synth_preset.h  voice.h  voice_allocator.h  wavetable_bank.h  wavetable_oscillator.h
native/src/: arpeggiator.cpp  audio_stream.cpp  audio_stream_ffi.cpp  drum_ffi.cpp  drum_synth.cpp  envelope.cpp  filter.cpp  fx_autowah.cpp  fx_gated_reverb.cpp  fx_multitap_delay.cpp  fx_spring_reverb.cpp  fx_tests.cpp  legacy_fx.cpp  lfo.cpp  midi_file.cpp  oboe_audio_ffi.cpp  oboe_audio_stream.cpp  oscillator.cpp  recorder.cpp  rhythm_pattern_player.cpp  sample_engine.cpp  sample_engine_ffi.cpp  synth_engine.cpp  synth_ffi.cpp  synth_part.cpp  synth_preset.cpp  voice.cpp  voice_allocator.cpp  wavetable_bank.cpp  wavetable_data.cpp
scripts/: analyze_multisample.py  apply_cull.dart  audit_presets.dart  classify_presets.dart  create_pm_presets.dart  deploy-desktop.sh  download-extra-samples.sh  extract_sf2.py  fix_presets.dart  generate_preset_library.py  render_presets.py
src/: app_state_manager.cpp  instrument_realism.cpp  plugin_editor.cpp  plugin_processor.cpp  preset_data.cpp  synth_engine_wrapper.cpp  user_preset_manager.cpp
test/: audio_renderer_test.dart  multi_slot_fx_test.dart  openamp_audio_stream_test.dart  openamp_synth_test.dart  synthwave_smoke_test.dart  widget_test.dart
tests/: flac_test.cpp  sample_load_test.cpp  sample_player_block_test.cpp  sample_static_test.cpp
tools/: sfz_to_manifest.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+77 files in other folders)
